trying to fix banner display on iphone

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -535,6 +535,9 @@ input:focus, textarea:focus {
     .projectButtonDiv {
         text-align: center;
     }
+    .banner {
+        background-attachment: scroll;
+    }
 }
 
 @media only screen and (max-width: 531px) {
@@ -559,5 +562,8 @@ input:focus, textarea:focus {
     }
     .projectButtonDiv {
         text-align: center;
+    }
+    .banner {
+        background-attachment: scroll;
     }
 }
